--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "express-rate-limit": "^7.1.0"
+    "express-rate-limit": "^7.1.0",
+    "axios": "^1.6.0"
   },
   "engines": {
     "node": "18.x"
