--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "hostvideo-api.js",
   "type": "module",
   "scripts": {
-    "start": "index.js"
+    "start": "node index.js"
   },
   "keywords": [
     "github",
