--- a/package.json
+++ b/package.json
@@ -1,24 +1,11 @@
 {
   "name": "hostvideo-api",
   "version": "1.0.0",
-  "description": "API to upload a video to GitHub and return a raw URL",
-  "main": "hostvideo-api.js",
   "type": "module",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "keywords": [
-    "github",
-    "video",
-    "api",
-    "upload",
-    "express"
-  ],
-  "author": "Minato",
   "license": "MIT",
+  "author": "MinatoCodes",
   "dependencies": {
     "@octokit/rest": "^20.0.0",
-    "axios": "^1.6.0",
-    "express": "^4.18.2"
+    "axios": "^1.6.0"
   }
 }
